test/error/struct-field-assign-type-mismatch.dsk
let S = struct
    x: int
let s = S(x = 1)
s.x = "hello"
